 fpgaenv-hybrid-xupv2-serial-synplify.apm Locally Modified          338 

Directory modules/bluespec/common/fpgaenv/physical-platform/xilinx_xup/serial
 xilinx-xup-serial.awb     Locally Modified          338 

Directory modules/bluespec/common/fpgaenv/physical-platform/htg_virtex5/pcie-enabled
 htg-v5-pcie-enabled-synplify.awb Locally Modified          338 
 htg-v5-pcie-enabled.awb   Locally Modified          338 

Directory modules/project
 SCons.top.template        Locally Modified          338 

Made a "synthesis tool" build option, which triggers the xst or synplify build paths.  This is needed to run fpga based regressions for 6.375.  

----------
kfleming    Date: Sat Dec 12 22:43:37 KST 2009  CSN: CSN-platforms-340
                  Sat Dec 12 13:43:37 UTC 2009


Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/ddr
 ddr_sdram.ucf             Locally Modified          339 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/pci-express-new
 pci-express-c-import-mmap.cpp Locally Modified          339 

Directory modules/project
 synplify.sdc              Locally Added               0 
 project-hybrid.awb        Locally Modified          339 
 SCons.top.template        Locally Modified          339 
 SCons.iface.template      Locally Modified          339 
 SCons.hw.template         Locally Modified          339 

Adding support for unified synplify and xst build

----------
kfleming    Date: Mon Dec 14 18:42:43 KST 2009  CSN: CSN-platforms-341
                  Mon Dec 14 09:42:43 UTC 2009


Directory modules/project
 project-hybrid.awb        Locally Modified          340 
 SCons.top.template        Locally Modified          340 
 SCons.iface.template      Locally Modified          340 
 SCons.hw.template         Locally Modified          340 

Reverting BSC_FLAGS_SIM and VERILOG in Scons child modules per adler.  Change in iface is not complete because I haven't figured out it's invocation yet.